--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 include:
-  - coverage/_css
-  - coverage/_icons
-  - coverage/_js
+  - coverage/css/**.css
+  - coverage/_icons/**.svg
+  - coverage/_js/**.js
