--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
 include:
-  - coverage/_css/**.css
+  - coverage/_css/botstrap.min.css
+  - coverage/_css/custom.css
+  - coverage/_css/nv.d3.min.css
+  - coverage/_css/octicons.css
+  - coverage/_css/style.css
   - coverage/_icons/**.svg
   - coverage/_js/**.js
