--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     ]
   },
   "require": {
-    "php": "^8.2"
+    "php": "^8.2",
+    "ext-sodium": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.5"
